Compute keypoints in camera frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(object_keypoints)
+project(object_keypoints_ros)
 find_package(catkin REQUIRED)
 catkin_python_setup()
 
