--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>object_keypoints</name>
+  <name>object_keypoints_ros</name>
   <version>0.1.0</version>
   <description>Tracking keypoints on objects.</description>
 
