Intergrate into a single launch file

--- a/config/calibration.yaml
+++ b/config/calibration.yaml
@@ -3,20 +3,22 @@ cam0:
   - 1
   camera_model: pinhole
   distortion_coeffs:
-  - -0.17461027035150273
-  - 0.027542740830885152
-  - 6.248739713012134e-05
-  - 9.109565479209673e-05
-  distortion_model: radtan
+  - 0
+  - 0
+  - 0
+  - 0
+  distortion_model: plumb_bob
   intrinsics:
-  - 697.8773221181651
-  - 697.2859406130203
-  - 648.0856262566795
-  - 371.49958099159505
+  - 613.7755737304688
+  - 613.7672119140625
+  - 319.5116271972656
+  - 250.294189453125
   resolution:
-  - 1280
-  - 720
+  - 640
+  - 480
   rostopic: /camera/color/image_raw
+
+
 cam1:
   T_cn_cnm1:
   - - 0.999991121255849
@@ -39,17 +41,17 @@ cam1:
   - 0
   camera_model: pinhole
   distortion_coeffs:
-  - -0.17586632015419967
-  - 0.028610988452462068
-  - -3.7003814169623655e-06
-  - -2.7473840703144198e-05
-  distortion_model: radtan
+  - 0
+  - 0
+  - 0
+  - 0
+  distortion_model: plumb_bob
   intrinsics:
-  - 695.4962586601407
-  - 694.7575730655351
-  - 646.8392006664676
-  - 367.6212371061266
+  - 613.7755737304688
+  - 613.7672119140625
+  - 319.5116271972656
+  - 250.294189453125
   resolution:
-  - 1280
-  - 720
+  - 640
+  - 480
   rostopic: /camera/color/image_raw
